tests/spec/compile-fail/183_comparison_operand_type_mismatch.zn
// category: compile-fail
// stage: mvp
// milestone: M2
// purpose: comparison operators require compatible known operand types

module tests.fail.comparisonOperandTypeMismatch;

struct Packet {
    enabled: Bool,
}

fn needFlag(value: Bool) -> U32 {
    return 1;
}

fn badComparisonOperands(flag: Bool, count: U32) -> Bool {
    val inferred = count == flag; // expected-error[E0302]: operator == requires operands of the same comparable type, got U32 and Bool
    val ordered = flag < count; // expected-error[E0302]: operator < requires numeric operands, got Bool and U32
    val typed: Bool = count <= flag; // expected-error[E0302]: operator <= requires numeric operands, got U32 and Bool
    var result: Bool = false;
    result = count != flag; // expected-error[E0302]: operator != requires operands of the same comparable type, got U32 and Bool
    val packet = Packet { enabled: count > flag }; // expected-error[E0302]: operator > requires numeric operands, got U32 and Bool
    var other: Packet = Packet { enabled: true };
    other.enabled = flag >= count; // expected-error[E0302]: operator >= requires numeric operands, got Bool and U32
    if count == flag { // expected-error[E0302]: operator == requires operands of the same comparable type, got U32 and Bool
        return false;
    }
    needFlag(count < flag); // expected-error[E0302]: operator < requires numeric operands, got U32 and Bool
    return flag > count; // expected-error[E0302]: operator > requires numeric operands, got Bool and U32
}
